[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Entities/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Entities/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Menus/FirstCutScene.gd" type="Script" id=4]
[ext_resource path="res://src/Menus/DialogBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Music and Sounds/assets_music_THEME_1.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/Exit.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogBox2" parent="CanvasLayer" instance=ExtResource( 5 )]
dialog = [ "SYSTEM WILL SELF DESTRUCT!" ]
auto_start = false

[node name="DialogBox1" parent="CanvasLayer" instance=ExtResource( 5 )]
dialog = [ "What is this?", "This looks advanced!" ]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.0928, 0.092, 0.1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDetectionZone2" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone2" index="0"]
position = Vector2( 296, 88 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 296, 72 )
texture = ExtResource( 7 )

[node name="Button" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 88 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 96 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -160, -96 )
stream = ExtResource( 6 )
autoplay = true

[connection signal="finished_dialog" from="CanvasLayer/DialogBox2" to="." method="_on_DialogBox_finished_dialog"]
[connection signal="finished_dialog" from="CanvasLayer/DialogBox1" to="." method="_on_DialogBox1_finished_dialog"]
[connection signal="body_entered" from="PlayerDetectionZone2" to="." method="_on_PlayerDetectionZone2_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="released" from="Button" to="." method="_on_Button_released"]

[editable path="PlayerDetectionZone2"]
